syntax = "proto3";

package techcubing;

option java_package = "org.cubingusa.techcubing.proto";
option java_outer_classname = "DeviceTypeProto";

enum DeviceType {
  UNKNOWN_DEVICE = 0;
  JUDGE = 1;
  SCRAMBLER = 2;
  ADMIN = 3;
}
